Fixing text overflow in a skillset

--- a/src/styles/about/Skills.css
+++ b/src/styles/about/Skills.css
@@ -57,8 +57,9 @@
     }
 
     .skill-list {
-        max-height: 125px;
+        max-height: 150px;
         columns: 2;
+        column-gap: 20px;
     }
 
     .skill-list li {
